--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #E4B233;
+    background-color: #c1c1c1;
 }
 #username:invalid{
     outline: 2px double gray;
@@ -11,6 +11,22 @@ label{
     display: block;
     margin: 1%;
     font-size: 25px;
+}
+img{
+    width: 100px;
+    position: absolute;
+    right:1560px;
+    top:2%;
+}
+.p{
+    font-size:22px ;
+    text-align: center;
+}
+.div0{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 25px 0;
 }
 button{
     background-color: red;
@@ -60,6 +76,14 @@ a:hover{
 a:focus{
     color: rgb(255, 0, 0);
 }
+.div{
+    text-align: center;
+    border:solid black 4px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
 
 @media screen and (max-width:600px){
     input{
@@ -71,5 +95,9 @@ a:focus{
         justify-content: center;
         flex-direction: column;
         align-items: center;
+    }
+    img{
+        right:310px;
+        width:60px;
     }
 }
